# ai-media-factory

./: .gitignore  README.md  pyproject.toml
afos_media_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: DAILY_LOG.md
pipeline/: LIMITATIONS.md  SCHEMA.md  cli.py  clips.py  config.py  highlights.py  orchestrator.py  path_utils.py
pipeline/core/: __init__.py  bfi_config.py  content_format_gate.py  content_strategy.py  content_type_filter.py  entity_matching.py  football_intelligence.py  media_discovery.py  media_discovery_platform.py  video_spec.py
pipeline/editing/: content_freshness.py  highlight_cutter.py  media_usability.py  media_verification.py  professional_sports_editor.py
pipeline/router/: routing_engine.py
pipeline/sources/: youtube_football_source.py
pipeline/stages/: media_provider.py  stage1_script.py  stage2_5_viral_intelligence.py  stage2_voice.py  stage3_visuals.py  stage4_assembly.py  stage5_format.py  stage6_output.py
pipeline/tests/: test_broadcast_footage_intelligence.py  test_content_freshness.py  test_end_to_end.py  test_media_verification.py  test_sprint_c_performance.py  test_sprint_d_content_format.py  test_stage1_script.py
pipeline/upload/: __init__.py  youtube.py
pipeline/viral/: viral_engine.py
samples/england-quarterfinals-example/: manifest.json
samples/messi-freekick-example/: manifest.json
