[project]
name = "afos-media-factory"
version = "0.1.0"
description = "AFOS Autonomous AI Media Factory - MVP pipeline"
requires-python = ">=3.10"

[project.scripts]
run_ai_media_factory = "pipeline.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline", "pipeline.core", "pipeline.stages"]
